--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -9,9 +9,18 @@
     </head>
     <body>
         <div>
-        ======================================= (temp)
+        ==========NAVIGATION BAR HERE===============
+        {% if user.is_authenticated %}
+            <a href="{% url 'profile' %}">My Profile</a>
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'register' %}">Register</a>
+        {% endif %}
+        
+        
 
-        </div>>
+        </div>
         {% block body %}
         {% endblock %}
     </body>
