refactored urls.py into separate apps for modularity and separation of concerns

--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -17,6 +17,6 @@
         <input type="password" name="confirm_password" placeholder="dont actually use 12345">
         Phone number:
         <input type="tel" name="phone_number">
-        <input type="submit" value="Login">
+        <input type="submit" value="Register">
     </form>
 {% endblock %}
