--- a/seat_signal/templates/seat_signal.html
+++ b/seat_signal/templates/seat_signal.html
@@ -1,5 +1,13 @@
-{% extends "layout.html" %}
+{% extends "core/layout.html" %}
 
 {% block body %}
-    <strong>seat_signal!!!</strong>
+    <strong>seat_signal!!!</strong> <br>
+    Form to test inputs to watch_course: <br>
+    <form action="{% url 'watch_course' %}" method="POST">
+        {% csrf_token %}
+        <input type="text" name="crn" placeholder="crn">
+        <input type="text" name="contact_method" placeholder="contact_method (call, text, or both?)">
+        <input type="submit" value="Test">
+    </form>
 {% endblock %}
+
