--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -17,7 +17,8 @@
             <a href="{% url 'login' %}">Login</a>
             <a href="{% url 'register' %}">Register</a>
         {% endif %}
-        
+        <a href="{% url 'index' %}">Home</a>
+        <a href="{% url 'seat-signal' %}">Seat Signal</a>
         
 
         </div>
