--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -8,17 +8,22 @@
         <link rel="stylesheet" href="{% static 'styles.css' %}">
     </head>
     <body>
-        <div>
-        ==========NAVIGATION BAR HERE===============
+        
+
+        <div id='navbar'>
+        
+        <strong>C@B</strong>-U
+        <a href="{% url 'index' %}">Home</a>
+        <a href="{% url 'seat-signal' %}">SeatSignal</a>
+
         {% if user.is_authenticated %}
             <a href="{% url 'profile' %}">My Profile</a>
             <a href="{% url 'logout' %}">Logout</a>
         {% else %}
-            <a href="{% url 'login' %}">Login</a>
             <a href="{% url 'register' %}">Register</a>
+            <a href="{% url 'login' %}">Login</a>
         {% endif %}
-        <a href="{% url 'index' %}">Home</a>
-        <a href="{% url 'seat-signal' %}">Seat Signal</a>
+
         
 
         </div>
