--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -3,30 +3,33 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>{% block title %}CAB Utilities{% endblock %}</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'styles.css' %}">
+        <title>{% block title %}C@B Utilities{% endblock %}</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{% static '/core/navbar.css' %}">
+        {% block head %}
+        {% endblock %}
+
     </head>
     <body>
-        
-
-        <div id='navbar'>
-        
-        <strong>C@B</strong>-U
-        <a href="{% url 'index' %}">Home</a>
-        <a href="{% url 'seat-signal' %}">SeatSignal</a>
-
-        {% if user.is_authenticated %}
-            <a href="{% url 'profile' %}">My Profile</a>
-            <a href="{% url 'logout' %}">Logout</a>
-        {% else %}
-            <a href="{% url 'register' %}">Register</a>
-            <a href="{% url 'login' %}">Login</a>
-        {% endif %}
-
-        
-
-        </div>
+        <nav class="navbar">
+            <div class="navbar-brand">
+                <strong class="brand-cab">COURSES @ BROWN</strong> <span class="brand-utilities">Utilities</span>
+            </div>
+            <div class="navbar-apps">
+                <a href="{% url 'index' %}">Home</a>
+                <a href="{% url 'seat-signal' %}">SeatSignal</a>
+                <a href="">PrereqMap</a>
+            </div>
+            <div class="navbar-users">
+                {% if user.is_authenticated %}
+                <a href="{% url 'profile' %}">My Profile</a>
+                <a href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                <a href="{% url 'register' %}">Register</a>
+                <a href="{% url 'login' %}">Login</a>
+                {% endif %}
+            </div>
+        </nav>
         {% block body %}
         {% endblock %}
     </body>
