--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -8,13 +8,14 @@
 {% block body %}
 <div class="profile-page">
     <div class="profile-box">
+        <div class="panel-header">Register</div>
         {% if message %}
             <div class="message">
                 {{ message }}
             </div>
             
         {% endif %}
-        <form action="{% url 'register' %}" method="POST">
+        <form class="profile-form" action="{% url 'register' %}" method="POST">
             {% csrf_token %}
             <div class="form-group">
                 <label for="name-field">Username</label>
@@ -32,10 +33,19 @@
             <div class="form-group">
                 <label for="num-field">Phone Number</label>
                 <input class="form-control" id="num-field" type="tel" name="phone_number">
-                <small class="form-text text-muted">I will never share your phone number. Required for course seat notifications by call/text.</small>
+                <small class="form-text text-muted">I will never share your phone number; required for course seat notifications by call/text.</small>
             </div>
-
-            <button type="submit" class="btn btn-primary">Register</button>
+            <div class="form-group">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <label class="form-check-label" for="gridCheck">
+                        I agree to the <a href="{% url 'register' %}">Terms of Service & Privacy Policy</a>
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Register</button>
+            </div>
         </form>
     </div>
 </div>
