--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -1,18 +1,39 @@
 {% extends "core/layout.html" %}
+{% load static %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static '/core/profile.css' %}">
+{% endblock %}
 
 {% block body %}
-    {% if message %}
-        <div class="message">
-            {{ message }}
-        </div>
-        
-    {% endif %}
-    <form action="{% url 'login' %}" method="POST">
-        {% csrf_token %}
-        Username:
-        <input type="text" name="username" placeholder="e.g. CPax">
-        Password:
-        <input type="password" name="password" placeholder="e.g. 12345 (jk)">
-        <input type="submit" value="Login">
-    </form>
+<div class="profile-page">
+    <div class="profile-box">
+        <div class="panel-header">Login</div>
+
+        {% if message %}
+            <div class="message">
+                {{ message }}
+            </div>
+        {% endif %}
+
+        <form class="profile-form" action="{% url 'login' %}" method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="name-field">Username</label>
+                <input class="form-control" id="name-field" type="text"
+                       name="username">
+            </div>
+
+            <div class="form-group">
+                <label for="password-field">Password</label>
+                <input class="form-control" id="password-field" type="password"
+                       name="password">
+            </div>
+
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
