seat signal ui progress

--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -3,6 +3,7 @@
 
 {% block head %}
     <link rel="stylesheet" href="{% static '/core/profile.css' %}">
+    <link rel="stylesheet" href="{% static '/core/forms.css' %}">
 {% endblock %}
 
 {% block body %}
