--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -3,6 +3,8 @@
 
 {% block head %}
     <link rel="stylesheet" href="{% static '/core/profile.css' %}">
+    <link rel="stylesheet" href="{% static '/core/forms.css' %}">
+
 {% endblock %}
 
 {% block body %}
