not designed for scale (will be too spammy towards C@B api until watch_course/tasks.py refactored) but form now works. UI for doing multiple is pending. frontend infrastructure exists compared to before

--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-apps">
                 <a href="{% url 'index' %}">Home</a>
-                <a title="Get notified by call when a course seat opens" href="{% url 'seat-signal' %}">SeatSignal</a>
+                <a title="Get notified by call when a course seat opens" href="{% url 'seat_signal' %}">SeatSignal</a>
                 <a title="Visualize prerequisites and quantify value" href="">PrereqMap</a>
                 <a title="Which semesters courses were offerred in the past" href="">Offering Patterns</a>
                 <a title="External site for course reviews" href="https://www.thecriticalreview.org/">Critical Review</a>
