form submission works, making itself invisible, bringing back add button, and adding (for now) a temp element to represent itself

--- a/seat_signal/static/seat-signal/seat_signal.css
+++ b/seat_signal/static/seat-signal/seat_signal.css
@@ -81,6 +81,10 @@
     display: inline-block;
 }
 
+#message {
+    color: red
+}
+
 /* Card Header */
 .panel-header {
     background: var(--brand-maroon);
