--- a/seat_signal/templates/seat_signal.html
+++ b/seat_signal/templates/seat_signal.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="{% static 'seat-signal/seat_signal.css' %}">
         <script>
             window.watchCourseUrl = "{% url 'watch_course' %}";
+            window.getAuthUrl = "{% url 'get_auth' %}"
             window.csrftoken = "{{ csrf_token }}";
         </script>
         <script defer src="{% static 'seat-signal/seat_signal.js' %}" defer></script>
