--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -6,6 +6,7 @@
         <title>{% block title %}C@B Utilities{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="{% static '/core/navbar.css' %}">
+        <link rel="icon" href="data:,">
         {% block head %}
         {% endblock %}
 
