--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -9,7 +9,12 @@
     <header class="hero-header"></header>
     <div class="homepage-text">
         <strong>homepage!!! welcome {{ user }}</strong>
+        <div id="tos">
+            <h1>Terms of Service & Privacy Policy</h1>
+        </div>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+        
     </div>
     
 
