--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -41,7 +41,7 @@
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="gridCheck">
                     <label class="form-check-label" for="gridCheck">
-                        I agree to the <a href="{% url 'register' %}">Terms of Service & Privacy Policy</a>
+                        I agree to the <a href="{% url 'index' %}#tos" target="_blank">Terms of Service & Privacy Policy</a>
                     </label>
                 </div>
             </div>
