--- a/core/static/core/index.css
+++ b/core/static/core/index.css
@@ -4,13 +4,13 @@
   width: 100%;
 
   /* background image settings */
-  background-image: url("https://media.discordapp.net/attachments/388721642722820096/1391657633655685120/ChatGPT_Image_Jul_7_2025_01_50_29_AM.png?ex=686e032b&is=686cb1ab&hm=01a9236ec83be1e7cf2eb7a40dc6b0a38000b38383a586ae2ef706c21186d4c9&=&format=webp&quality=lossless&width=2114&height=1410");
-  background-size: cover;
+  background-image: url("https://i.imgur.com/By6zr76.png");
+  background-size: 100% 100%;
   background-position: center;
 
   position: relative
 }
 
 .homepage-text {
-    background-color: #eeece7;
+    background-color: #624026;
 }
