--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -35,7 +35,7 @@
             <div class="form-group">
                 <label for="num-field">Phone Number</label>
                 <input class="form-control" id="num-field" type="tel" name="phone_number">
-                <small class="form-text text-muted">I will never share your phone number; required for course seat notifications by call/text.</small>
+                <small class="form-text text-muted">I will never share your phone number; it's required for course seat notifications by call/text.</small>
             </div>
             <div class="form-group">
                 <div class="form-check">
